crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_07_set_context_merge.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 1
completed_tasks:
  update_roles:
    status: success
    output:
      applied: true
      patch:
        user:
          id: 1
          roles:
            - editor
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
