crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_08_command_success.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 1
completed_tasks:
  run_echo:
    status: success
    output:
      duration_ms: "[duration]"
      exit_code: 0
      stderr: ""
      stdout: "{\"cpu\": 45}"
      success: true
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
