crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_09_read_control_file.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 1
completed_tasks:
  read_cfg:
    status: success
    output:
      done: false
      exists: true
      message: ~
      metadata: ~
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
