crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_12_nested_expressions.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 3
completed_tasks:
  calculate:
    status: success
    output:
      applied: true
      patch:
        result: 52
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  check_result:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  success:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
