crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_25_human_approval.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 2
completed_tasks:
  approved_action:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  request_approval:
    status: success
    output:
      approved: true
      reason: approved by test
      timestamp: "[timestamp]"
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
