crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_29_history_audit.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 5
completed_tasks:
  t1:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  t2:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  t3:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  t4:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
  t5:
    status: success
    output:
      status: ok
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
