crates/cli/tests/integration/snapshots/test_workflow_scenarios__scenario_37_nested_workflow_basic.snap
---
source: crates/cli/tests/integration/test_workflow_scenarios.rs
expression: summary
---
execution_id: "[uuid]"
total_iterations: 1
completed_tasks:
  call_child:
    status: success
    output:
      child_completed_task_count: "[count]"
      child_execution_id: "[uuid]"
      child_status: Completed
      child_total_iterations: "[iterations]"
      child_workflow_file: "[path]"
      error: ~
      result: ~
    error_code: ~
    duration_ms: "[duration]"
    run_seq: 1
result: ~
output_valid: true
